fix fixed top nav overlapping content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 }
 body{
     font-family: var(--primary-font);
+    padding-top: 57.15px; /*push page down below sticky top navbar*/
 }
 
 h1,
